--- a/src/component/Card/style.css
+++ b/src/component/Card/style.css
@@ -1,21 +1,13 @@
 .card {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  min-width: 0;
-  word-wrap: break-word;
   background-color: var(--White);
-  background-clip: border-box;
   border: 1px solid var(--DarkBlue);
   border-radius: 4px;
 }
 .card-header {
-  padding: 0.5rem 1rem;
-  margin-bottom: 0;
+  padding: 10px 20px;
   background-color: var(--DarkBlue);
   color: var(--White);
 }
 .card-body {
-  flex: 1 1 auto;
-  padding: 1rem;
+  padding: 20px;
 }
