--- a/src/pages/addLocation/component/Map/style.css
+++ b/src/pages/addLocation/component/Map/style.css
@@ -15,16 +15,16 @@
 }
 .fullscreen-button {
   position: absolute;
-  z-index: 999999999999999999999;
+  z-index: 9999;
   width: 31px;
   height: 30px;
   line-height: 30px;
   right: 10px;
   top: 10px;
-  background-color: var(--White);
-  border: 1px solid #ccc;
+  border: 1px solid var(--NeturalLight);
+  cursor: pointer;
 }
 .fullscreen-button:hover {
-  background-color: #fff;
+  background-color: var(--NeturalLight);
   border-bottom: 1px solid #ccc;
 }
